
  API BREAKS:

   * ``Branch.append_revision`` is removed altogether; please use 
     ``Branch.set_last_revision_info`` instead.  (Martin Pool)

   * The ``add_lines`` methods on ``VersionedFile`` implementations has changed
     its return value to include the sha1 and length of the inserted text. This
     allows the avoidance of double-sha1 calculations during commit.
     (Robert Collins)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

  TESTING:

   * Tests may now raise TestNotApplicable to indicate they shouldn't be 
     run in a particular scenario.  (Martin Pool)

   * New function multiply_tests_from_modules to give a simpler interface
     to test parameterization.  (Martin Pool, Robert Collins)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

   * NULL_REVISION is returned to indicate the null revision, not None.
     (Aaron Bentley)

   * Use UTF-8 encoded StringIO for log tests to avoid failures on
     non-ASCII committer names.  (Lukáš Lalinský)

  INTERNALS:

   * ``bzrlib.plugin.all_plugins`` has been deprecated in favour of
     ``bzrlib.plugin.plugins()`` which returns PlugIn objects that provide
     useful functionality for determining the path of a plugin, its tests, and
     its version information. (Robert Collins)

   * Add the option user_encoding to the function 'show_diff_trees()'
     in order to move the user encoding at the UI level. (Goffredo Baroncelli)

   * Add the function make_commit_message_template_encoded() and the function
     edit_commit_message_encoded() which handle encoded strings.
     This is done in order to mix the commit messages (which is a unicode
     string), and the diff which is a raw string. (Goffredo Baroncelli)

    * Deprecated method ``find_previous_heads`` on
      ``bzrlib.inventory.InventoryEntry``. This has been superseded by the use